# InsectMonitor

./: .gitignore  CMakeLists.txt  custom_partitions.csv  sdkconfig.defaults
components/PMU/: CMakeLists.txt  Kconfig
components/PMU/src/: port_axp2101.cpp  port_i2c.cpp  port_pmu.c  port_pmu.h
components/box_controller/: CMakeLists.txt  box_controller.c  box_controller.h
components/camera/: CMakeLists.txt  camera.c  camera.h  camera_handler.c  camera_handler.h
components/remote_server/: CMakeLists.txt  Kconfig.projbuild  remote_server.c  remote_server.h
components/screen/: CMakeLists.txt  screen.c  screen.h
components/sd_storage/: CMakeLists.txt  sd_storage.c  sd_storage.h  sd_storage_csv.c  sd_storage_data_logs.c
components/sensors_handler/: CMakeLists.txt  htu21d.c  htu21d.h  sensors_handler.c  sensors_handler.h
components/status_handler/: CMakeLists.txt  status_handler.c  status_handler.h
components/systime_handler/: CMakeLists.txt  systime_handler.c  systime_handler.h
components/tg_bot/: CMakeLists.txt  Kconfig.projbuild  tg_bot.c  tg_bot.h
components/utils/: CMakeLists.txt  utils.c  utils.h
components/webpage/: CMakeLists.txt  webpage.c  webpage.h  webpage_storage.c  webpage_storage.h
components/wifi_handler/: CMakeLists.txt  wifi_handler.c  wifi_handler.h
main/: CMakeLists.txt  idf_component.yml  main.c
webpage/: index.html
webpage/css/: main.css
webpage/js/: chartjs-adapter-luxon.umd.min.js  charts.js  color.min.js  imagehandler.js  jcanvas.min.js  main.js  update.js  utils.js  websocket.js
(+2 files in other folders)
